accessibility: increase contrast on review author links. Issue: #33

--- a/toy_tribe/static/css/style.css
+++ b/toy_tribe/static/css/style.css
@@ -926,6 +926,10 @@ main {
     height: 4rem;
 }
 
+.review-author p a{
+    color: blue;
+}
+
 .review-rating {
     text-align: right;
     height: 4rem;
